# Paper-Graph

./: .env.example  CHANGELOG.md  LICENSE  Makefile  README.md  agent.md  example.py  pyproject.toml  requirements.txt  start_web.py  test_integration.py  web_app.py
client/: config.py  mcp_client.py  mcp_config.json
docs/: api.md  installation.md
paper_graph/: __init__.py  agent.py  cli.py  config.py  graph.py  models.py  server.py
tests/: __init__.py  test_config.py  test_models.py
