[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-graph"
version = "0.1.0"
authors = [
  { name = "H-Gelender", email = "your-email@example.com" },
]
description = "A MCP LLM agent that creates graph structures from scientific papers using Gemini 2.5 Flash Lite for tag extraction"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "paper-search-mcp>=0.1.3",
    "google-generativeai>=0.8.0",
    "mcp[cli]>=1.6.0",
    "fastmcp",
    "networkx>=3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "asyncio-mqtt>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
paper-graph = "paper_graph.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["paper_graph"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true